--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="nextTime-body">
         <h1>内容</h1>
         <div class="nextTime-bodyWrap">
-          <h2>環境構築&HTML基礎</h2>
+          <h2>HTML基礎[続]</h2>
           <a href="./slide/01.pdf" target="_blank" rel="noopener noreferrer"><i class="material-icons">cloud_download</i></a>
           <ul>
             <li>HTML, CSSを自分のPCで確認する</li>
