リンクの追加

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li>HTMLをブラウザで表示させる</li>
             <li>HTMLの要素紹介</li>
             <li>Webページの目的</li>
+            <li><a href="https://www.figma.com/proto/j0r8oHRNuugiIay27dfn7T/Untitled?node-id=33%3A277&scaling=min-zoom" target="_blank"><i class="material-icons">launch</i>imgタグの正しい使い方</a></li>
           </ul>
         </div>
       </section>
