--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>ひたすら実践（詳細はページ下）</li>
         </ul>
 
-        <h2>CSS基礎 <a class="curriculum__link" href="./slide/01.pdf" target="_blank" rel="noopener noreferrer"><i class="material-icons">launch</i>資料</a></h2>
+        <h2>CSS基礎 <a class="curriculum__link" href="https://www.figma.com/proto/j0r8oHRNuugiIay27dfn7T/susan?node-id=50%3A29&scaling=contain" target="_blank" rel="noopener noreferrer"><i class="material-icons">launch</i>資料</a></h2>
         <ul>
           <li>CSSとは</li>
           <li>CSSの書き方</li>
