--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <h2>imgタグの正しい使い方 <a class="curriculum__link" href="https://www.figma.com/proto/j0r8oHRNuugiIay27dfn7T/Untitled?node-id=33%3A277&scaling=min-zoom" target="_blank" rel="noopener noreferrer"><i class="material-icons">launch</i>資料</a></h2>
 
-        <h2>開発環境のTips <a class="curriculum__link" href="https://www.figma.com/proto/j0r8oHRNuugiIay27dfn7T/susan?node-id=54%3A1&scaling=contain" target="_blank" rel="noopener noreferrer"><i class="material-icons">launch</i>資料</a></h2>
+        <h2>開発環境のTips <a class="curriculum__link" href="https://www.figma.com/proto/j0r8oHRNuugiIay27dfn7T/susan?node-id=74%3A39&scaling=scale-down-width" target="_blank" rel="noopener noreferrer"><i class="material-icons">launch</i>資料</a></h2>
 
         <ul>
           <li>テキストエディタ：VS Code</li>
